[package]
name = "pd-external-rs"
version = "0.1.0"
authors = ["Thomas Crowley <crowley@kibu.com.au>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Rust bindings for pure data externals."
keywords = ["bindings", "pure-data", "pd"]
repository = "https://github.com/wavejumper/pd-external-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.50"
